--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -383,7 +383,7 @@
                            MaxHeight="200"
                            Source="{x:Bind Thumb, Mode=OneWay}"
                            ToolTipService.Placement="Right"
-                           ToolTipService.ToolTip="{x:Bind PageId, Mode=OneWay}" />
+                           ToolTipService.ToolTip="{x:Bind PageID, Mode=OneWay}" />
                   </DataTemplate>
                 </GridView.ItemTemplate>
                 <GridView.Footer>
