--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -153,7 +153,7 @@
                  Margin="0,4"
                  IsReadOnly="{x:Bind pb_Loading.IsIndeterminate, Mode=OneWay}"
                  PlaceholderText="User name"
-                 InputScope="AlphanumericHalfWidth"
+                 InputScope="EmailNameOrAddress"
                  TextChanged="tb_TextChanged" />
         <PasswordBox x:Uid="Views/LogOnDialog/PasswordBox"
                      x:Name="pb_pass"
