--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -78,8 +78,22 @@
     </Style>
   </UserControl.Resources>
   <StackPanel>
+    <FlipView x:Name="fv_Banners" 
+              Margin="-12,-8"
+              Height="93">
+      <FlipView.Background>
+        <ImageBrush ImageSource="ms-appx:///Assets/SplashScreen.png"
+                    Stretch="UniformToFill" />
+      </FlipView.Background>
+      <FlipView.ItemTemplate>
+        <DataTemplate xmlns:storage="using:Windows.Storage"
+                      x:DataType="storage:StorageFile">
+          <Image Source="{x:Bind Converter={StaticResource FileConverter}}" />
+        </DataTemplate>
+      </FlipView.ItemTemplate>
+    </FlipView>
     <TextBlock x:Name="tb_AppName"
-               Margin="4"
+               Margin="4,16,4,4"
                Style="{StaticResource TitleTextBlockStyle}"
                Text="AppName" />
     <TextBlock x:Name="tb_VersionInfoTag"
@@ -226,7 +240,7 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
               x:Uid="Controls/AboutControl/UpdateButton"
               Content="Update"
               Click="btnUpdateEt_Click"
-              Style="{StaticResource AboutControlCaptionButtonStyle}"/>
+              Style="{StaticResource AboutControlCaptionButtonStyle}" />
       <ProgressRing Style="{StaticResource UpdateProgressRingStyle}"
                     IsActive="{x:Bind btnUpdateEt.IsEnabled, Mode=OneWay, Converter={StaticResource LogicalNotConverter}}" />
     </StackPanel>
@@ -245,7 +259,7 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
               x:Uid="Controls/AboutControl/UpdateButton"
               Content="Update"
               Click="btnUpdateEht_Click"
-              Style="{StaticResource AboutControlCaptionButtonStyle}"/>
+              Style="{StaticResource AboutControlCaptionButtonStyle}" />
       <ProgressRing Style="{StaticResource UpdateProgressRingStyle}"
                     IsActive="{x:Bind btnUpdateEht.IsEnabled, Mode=OneWay, Converter={StaticResource LogicalNotConverter}}" />
     </StackPanel>
