add info page; remove my wrappanel
Former-commit-id: c0da2d817b3b7c578048c7d4885be37266796d5c [formerly 18bfdb58fc52b26fda72d26c76651c7a694d3c42]
Former-commit-id: 38e44c79dc4bf50f24b4a6773b55c817b5bfc63a

--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -6,6 +6,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:tagging="using:ExClient.Tagging"
              mc:Ignorable="d"
+             xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls"
              d:DesignHeight="200"
              d:DesignWidth="700">
   <UserControl.Resources>
@@ -88,7 +89,7 @@
           </GridView.ItemContainerStyle>
           <GridView.ItemsPanel>
             <ItemsPanelTemplate>
-              <local:WrapPanel />
+              <tk:WrapPanel />
             </ItemsPanelTemplate>
           </GridView.ItemsPanel>
           <GridView.ItemContainerTransitions>
