--- a/ExViewer/Views/SplashControl.xaml
+++ b/ExViewer/Views/SplashControl.xaml
@@ -49,7 +49,7 @@
              Grid.RowSpan="2"
              HorizontalAlignment="Center"
              VerticalAlignment="Center"
-             Stretch="Fill"
+             Stretch="Uniform"
              ImageFailed="img_pic_ImageFailed"
              ImageOpened="img_pic_ImageOpened"
              Opacity="0">
