--- a/ExViewer/Views/SplashControl.xaml
+++ b/ExViewer/Views/SplashControl.xaml
@@ -35,28 +35,28 @@
         <RowDefinition Height="2*" />
         <RowDefinition Height="*" />
       </Grid.RowDefinitions>
-      <Image x:Name="img_splash"
-             Grid.RowSpan="2"
-             HorizontalAlignment="Center"
-             VerticalAlignment="Center"
-             RenderTransformOrigin="0.5,0.5"
-             Source="ms-appx:///Assets/SplashScreen.png">
-        <Image.RenderTransform>
-          <CompositeTransform />
-        </Image.RenderTransform>
-      </Image>
-      <Image x:Name="img_pic"
-             Grid.RowSpan="2"
-             HorizontalAlignment="Center"
-             VerticalAlignment="Center"
-             Stretch="Uniform"
-             ImageFailed="img_pic_ImageFailed"
-             ImageOpened="img_pic_ImageOpened"
-             Opacity="0">
-        <Image.Source>
-          <BitmapImage />
-        </Image.Source>
-      </Image>
+      <Grid x:Name="gd_Foreground"
+            Grid.RowSpan="2"
+            VerticalAlignment="Top">
+        <Image x:Name="img_splash"
+               VerticalAlignment="Center"
+               RenderTransformOrigin="0.5,0.5"
+               Source="ms-appx:///Assets/SplashScreen.png">
+          <Image.RenderTransform>
+            <CompositeTransform />
+          </Image.RenderTransform>
+        </Image>
+        <Image x:Name="img_pic"
+               Margin="-10000,0"
+               VerticalAlignment="Center"
+               ImageFailed="img_pic_ImageFailed"
+               ImageOpened="img_pic_ImageOpened"
+               Opacity="0">
+          <Image.Source>
+            <BitmapImage />
+          </Image.Source>
+        </Image>
+      </Grid>
       <ProgressRing x:Name="pr"
                     Grid.Row="1"
                     Width="40"
