skip_mastertags UI
Former-commit-id: ffa7282c3252db583c466f8dfb21ecff6e2e7892 [formerly b89e2b90848a917a3fb3bbc100c164e9b1ea5e0d]
Former-commit-id: 6b3ca2f8a0098f7f0fa8cab6c58fb3697687d966

--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -164,6 +164,10 @@
                         Content="Search downvoted tags"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
                         IsChecked="{x:Bind VM.AdvancedSearch.SearchDownvotedTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
+              <CheckBox x:Uid="Views/SearchPage/SkipMasterTagsCheckBox"
+                        Content="Skip master tags"
+                        Style="{StaticResource AdvancedSearchOptionStyle}"
+                        IsChecked="{x:Bind VM.AdvancedSearch.SkipMasterTags, Mode=TwoWay, Converter={StaticResource EmptyConverter}}" />
               <CheckBox x:Uid="Views/SearchPage/ShowExpungedCheckBox"
                         Content="Show expunged galleries"
                         Style="{StaticResource AdvancedSearchOptionStyle}"
